# Trading

./: .env.futures.example  .env.tsmom.example  .gitignore  .mcp.json  HYPE_BOT_BRIEF.txt  STRATEGIES_AND_TESTS.txt  openbb_wrapper.py  pyproject.toml
.claude/: settings.json
backtest/: OVERNIGHT_RESULTS_jun10.md  SWING_ENGINE_SPEC.md  audit_orb_integrity.py  bench_poll_capacity.py  biotech_backtest.py  biotech_conviction_backtest.py  biotech_signal_probs.json  build_tier2_trades.py  compare_be_lift.py  compare_capaware.py  compare_cutoff.py  compare_daily_context.py  compare_diversification.py  compare_earnings_flag.py  compare_effort_filter.py  compare_entry_touch.py  compare_event_days.py  compare_exits.py  compare_exits_slippage.py  compare_meanrev.py  compare_norefill_trend.py  compare_or_byregime.py  compare_or_length.py  compare_or_range_bear.py  compare_or_range_capaware.py  compare_or_range_filter.py  compare_or_range_realcost.py  compare_or_range_robust.py  compare_or_range_trail.py  compare_overnight.py  compare_pyramid.py  compare_reentry_retest.py  compare_regime.py  compare_regime_filter.py  compare_regime_shorts.py  compare_risk_cap.py  compare_rvol.py  compare_sector_cap.py  compare_selection.py  compare_short.py  (+74 more)
futures/: .gitignore  backtest_mes.py  backtest_momentum.py  backtest_orb.py  backtest_overnight.py  broker_ibkr.py  data.py  diversification.py  portfolio_combo.py  run_mes_bot.py
live/: biotech_radar_latest.json  config.py  config_ui.py  heartbeat.py  notify.py  paper_orb.py  run_dualmom.py  status.py  status_server.py  status_ui.py
(+141 files in other folders)
