[project]
name = "trading"
version = "0.1.0"
description = "Personal algo-trading workspace — strategies + backtests + paper execution."
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.30.0",
    "pandas>=2.2.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
]

[tool.uv]
package = false
